<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFBDB3"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="@font/russo_one"
            android:maxHeight="60dp"
            android:minHeight="22dp"
            android:text="@string/welcome_to_emi_app"
            android:textAlignment="center"
            android:textColor="#4A476E"
            android:textSize="34sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:text="@string/calculate_your_mortgage_payment_here"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_mortgage_principal_amount"
            android:inputType="numberDecimal"
            android:minHeight="60dp"
            android:textColor="#0B0707"
            tools:ignore="InvalidId" />

        <EditText
            android:id="@+id/editIR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_interest_rate"
            android:inputType="numberDecimal"
            android:minHeight="60dp" />

        <EditText
            android:id="@+id/editYears"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_amortization_period_in_years"
            android:inputType="number"
            android:minHeight="60dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:text="@string/payments_will_be_made_monthly"
            android:textAlignment="center"
            android:textColor="#0B0A0A"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3B5A40"
            android:text="Calculate" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="35dp"
            android:text="@string/payment_results"
            android:textColor="#050505"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:text="@string/you_will_pay_this_amount_monthly"
            android:textColor="#0C0C0C"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="60dp"
            android:textAlignment="center"
            android:textColor="#511313"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#5A4845"
            android:text="Next Page"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>